--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-30 01:59:47
+lastsearch = 2024-07-30 04:28:28
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -22,9 +22,9 @@ title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
-match = -6.5%%
-title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc
+match = -19.4%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
 match = -9.7%%
