--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-30 01:53:24
+lastsearch = 2024-07-30 04:27:02
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -307,9 +307,9 @@ title = 10 plus! - Review of Tokia Hotel & Spa, Nha Trang, Vietnam
 url = https://www.tripadvisor.com/ShowUserReviews-g293928-d13388287-r887068402-Tokia_Hotel_Spa-Nha_Trang_Khanh_Hoa_Province.html
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Thuy Trang
-url = https://en.wikipedia.org/wiki/Thuy_Trang
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Burning_Man
 
 [status.epicgames.com]
 match = -33.3%%
