--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-30 01:52:25
+lastsearch = 2024-07-30 05:16:05
 
 [demxanh.com]
-match = 25.9%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = -7.4%%
+title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html?srsltid=AfmBOorWVJBsLyKzDDy7KV4pHFeQZoJ_oBMYg8qZc3OJUOzq-8drh4gP
 
 [goni.vn]
 match = 14.8%%
@@ -17,14 +17,14 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
+match = -37.0%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [foreverbedding.net]
 match = -59.3%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoo75baO3KrqG0tZGRwBFkPzY-YVdnwRXi-7UT3dd1TviF9pGz3I
 
 [congtynemthangloi.com]
 match = -29.6%%
