--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-30 04:13:25
+lastsearch = 2024-07-30 05:14:02
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/chieu-truc-1-6x2m.htm
 [www.lazada.vn]
 match = 3.6%%
 title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html?srsltid=AfmBOooUzKbipXAzn8Ruxlqnwh3wt5G94Z078riaC9D00g7TdPuBu78m
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
 
 [thegioidemonline.com]
 match = -39.3%%
