--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-30 02:38:04
+lastsearch = 2024-07-30 08:06:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -34.6%%
-title = Bộ Chăn Ga Gối Cotton Poly Hạc Hồng Chăn Chần Bông ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-Hạc-Hồng-Chăn-Chần-Bông-Dày-Dặn-i.214539081.4247239060
+match = -42.3%%
+title = Bộ Chăn Ga Gối Cotton Tici M2T Bedding Drap Giường Đủ ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Tici-M2T-Bedding-Drap-Giường-Đủ-Kích-Thước-Trải-Nệm-1m-1m2-1m4-1m6-1m8-2m2-Không-Kèm-Ruột-i.240825360.5023438940
 
 [bedding.vn]
 match = -42.3%%
