--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-29 22:20:53
+lastsearch = 2024-07-30 08:06:44
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -152.6%%
-title = Mẹ Ơi Có Biết - Bé Khánh Vy | Nhạc Thiếu Nhi Hay Nhất, Mẹ ...
-url = https://www.youtube.com/watch?v=4dXj1h8bQHs
+match = -115.8%%
+title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
+url = https://www.youtube.com/watch?v=ZCV14D2HeDA
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoqqNUvQcInPRvoIrFvwf60yL0kDM9l-VBKgF5T1UU2m5GdxbKsU
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
 match = -110.5%%
