--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-29 21:40:54
+lastsearch = 2024-07-30 08:10:17
 
 [eva.vn]
 match = -131.6%%
@@ -12,9 +12,9 @@ title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ..
 url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
-match = -173.7%%
-title = Trong nhà có 4 loại cây bỗng dưng ra hoa là điềm gở, tai họa ...
-url = https://phunutoday.vn/trong-nha-co-4-loai-cay-bong-dung-ra-hoa-la-diem-go-tai-hoa-khong-moi-ma-den-d423355.html
+match = -152.6%%
+title = 3 tuyệt chiêu người trồng hoa nhài nên biết: 1 cây nở 400 ...
+url = https://phunutoday.vn/3-tuyet-chieu-nguoi-trong-hoa-nhai-nen-biet-1-cay-no-400-bong-hoa-thom-ngat-tan-lai-no-d373856.html
 
 [shopee.vn]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 10.5%%
+title = Hoa chiều tím trắng cao E1
+url = https://mocnhienfarm.com/products/hoa-chieu-trang
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
