--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-30 04:57:34
+lastsearch = 2024-07-30 08:01:19
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
 match = -84.6%%
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -223.1%%
-title = RRK 12 Angles of Strikes | Kali Arnis Eskrima FMA
-url = https://www.youtube.com/watch?v=Ir_kRhS3llY
+match = -338.5%%
+title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
+url = https://www.youtube.com/watch?v=wwH3mdjbKac
 
 [www.regmovies.com]
 match = -215.4%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ayu Gani 🐘 (@ganegani)
-url = https://www.instagram.com/ganegani/?hl=en
+match = -307.7%%
+title = This is a 16c Friendship Bowl/qadah-e dust gani inscribed ...
+url = https://www.instagram.com/p/CKK963KgYX7/?ref=4cijdcyltmi&hl=en
 
 [www.nebf.com]
 match = -50.0%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = 0.0%%
-title = Silenced (2011)
-url = https://www.imdb.com/title/tt2070649/
+match = -92.3%%
+title = Ginny & Georgia (TV Series 2021
+url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
 match = -292.3%%
