--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-30 04:21:49
+lastsearch = 2024-07-30 08:13:04
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 [www.diepxuan.com]
 match = 61.5%%
 title = Điệp Xuân Nệm lò xo Everon Pocket 18
-url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html?srsltid=AfmBOoog6-0VcoXbprHaGePLWBbrTp5gQqpOEvdSUTFIG-bF4cq9_Cq5
+url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
 match = -26.9%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOopNk4M_x-6fFQ8wKXM10zDs5W9K03ihcHGG9FP2F3eGoFVL9wFl
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
