--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-29 22:29:52
+lastsearch = 2024-07-30 07:59:11
 
 [changagoidemtamhao.com]
-match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LSP
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
+match = -10.0%%
+title = Đệm PYEODA
+url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
 match = -70.0%%
@@ -22,9 +22,9 @@ title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
 url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
-match = -75.0%%
-title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
-url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
+match = -80.0%%
+title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ's post
+url = https://www.facebook.com/pyeoda.vn/posts/nệm-lò-xo-bảo-vệ-cột-sống-khỏe-an-vui-đón-tếtmỗi-sáng-thức-dậy-lưng-đau-tinh-thầ/898284118968513/
 
 [shopee.vn]
 match = -70.0%%
