--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-30 04:33:54
+lastsearch = 2024-07-30 08:12:23
 
 [www.diepxuan.com]
-match = 13.6%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -127.3%%
-title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
-url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
 match = -50.0%%
@@ -48,8 +48,8 @@ url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
 match = -27.3%%
-title = Giường sắt giả đèn hoa văn - Hà Nội
-url = https://demxanh.com/giuong-sat-gia-den-hoa-van.html
+title = Giường sắt Duy Phương cao cấp bọc da
+url = https://demxanh.com/giuong-sat-duy-phuong-cao-cap-boc-da.html
 
 [www.kymdan.com]
 match = -18.2%%
