--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-30 06:44:10
+lastsearch = 2024-07-30 08:04:54
 
 [www.diepxuan.com]
 match = -131.2%%
 title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOoq-s8vP2mjFIYU9V3Hi-BkIhVrwPB__gJCEGl9YFR9ZJVwZC6CG
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOoo1RTwrxbh05s9U1lT20edlHfaNtvEN35SLma3wGgWnvcyWwUi_
 
 [m.facebook.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -243.8%%
-title = Lip liner: @Huda Beauty in muted pink Lipstick: @Charlotte ...
-url = https://www.tiktok.com/@faydeutsch/video/7278866493734178094
+match = -31.2%%
+title = Huda Beauty Best Lip Liner
+url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
 
 [archiveofourown.org]
 match = -137.5%%
@@ -67,8 +67,8 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.facebook.com]
-match = -243.8%%
-title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick Tím ...
+match = -225.0%%
+title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick ...
 url = https://www.facebook.com/photo.php?fbid=122125314410079971&id=61552399139360&set=a.122098393922079971&locale=ms_MY
 
 [archive.org]
