--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-30 04:48:52
+lastsearch = 2024-07-30 10:00:15
 
 [vnexpress.net]
 match = -128.6%%
@@ -350,4 +350,9 @@ url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt
 match = -61.9%%
 title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
 url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
+
+[www.traveloka.com]
+match = -114.3%%
+title = Hồ Tràm Vũng Tàu: kinh nghiệm du lịch chi tiết tháng 7/2024
+url = https://www.traveloka.com/vi-vn/explore/destination/ho-tram-vung-tau/143529
 
