--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-30 02:47:24
+lastsearch = 2024-07-30 10:00:54
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -114.3%%
-title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
-url = https://www.roc-taiwan.org/vn_vi/cat/9.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [www.facebook.com]
-match = -95.2%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -100.0%%
+title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
+url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
 
 [cau-ca.com]
 match = -42.9%%
