--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-30 06:48:36
+lastsearch = 2024-07-30 09:54:45
 
 [chieutrelanlan.com]
 match = -16.7%%
@@ -57,9 +57,9 @@ title = Thế Giới Chiếu Trúc
 url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = 57.1%%
-title = CHIẾU TRÚC HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/chieu-truc-huong-truc/
+match = 12.5%%
+title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
 
 [www.xskthcm.com]
 match = -83.3%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = -12.5%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -45.8%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
