--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-29 21:16:48
+lastsearch = 2024-07-30 09:58:32
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxWCc1A0&sig=ACfU3U3UEauvwPuqyP3serYMnGrs5AMRqw&hl=en&sa=X&ved=2ahUKEwiymeeqrMyHAxVbEFkFHbqwC_4Q6AF6BAgZEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxXxb0zY&sig=ACfU3U2eoGhsUEAILIAg-Pd9ITciwuIppw&hl=en&sa=X&ved=2ahUKEwjJ5ra54s2HAxVshYkEHX6JIdwQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
-url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
+match = -238.5%%
+title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
+url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
