--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-07-30 05:51:06
+lastsearch = 2024-07-30 09:59:35
 
 [www.diepxuan.com]
 match = 44.4%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOopKUDsyVYlS0-qbhEP1pDGCNdBAZotp0jtO5Uc0vCEduicD35Zu
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [www.michaelmarkowski.com]
 match = -100.0%%
