--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-30 06:36:09
+lastsearch = 2024-07-30 09:56:48
 
 [www.instagram.com]
 match = -50.0%%
@@ -22,9 +22,9 @@ title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
 url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -127.8%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [www.youtube.com]
 match = -111.1%%
